--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "wreckit",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "A CLI tool for turning ideas into automated PRs through an autonomous agent loop",
   "type": "module",
   "main": "./dist/index.js",
   "bin": {
     "wreckit": "./dist/index.js"
   },
+  "files": [
+    "dist/",
+    "README.md",
+    "AGENTS.md"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/mikehostetler/wreckit.git"
