--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^25.0.8",
     "@types/pino": "^7.0.4",
     "chalk": "^5.3.0",
+    "fast-check": "^4.5.3",
     "tsup": "^8.3.5",
     "typescript": "^5.9.3"
   },
