feat(ideas): enhance ideas command with interactive interview and structured parsing
- Introduced a new interactive interview mode for the ideas command, allowing users to articulate their ideas through a conversational interface.
- Updated the parsing logic to support structured output, capturing detailed information such as problem statements, motivations, and success criteria.
- Refactored the ideas command to streamline input handling, accommodating both file input and interactive sessions.
- Added new MCP tools for saving parsed ideas and PRDs, improving integration with the overall workflow.
- Updated tests to cover new functionalities and ensure robust behavior across different input scenarios.

This enhancement significantly improves the user experience and the quality of idea capture within the system.

--- a/.wreckit/config.json
+++ b/.wreckit/config.json
@@ -3,11 +3,9 @@
   "base_branch": "main",
   "branch_prefix": "wreckit/",
   "agent": {
+    "mode": "sdk",
     "command": "claude",
-    "args": [
-      "--dangerously-skip-permissions",
-      "--print"
-    ],
+    "args": [],
     "completion_signal": "<promise>COMPLETE</promise>"
   },
   "max_iterations": 100,
